2011-05-29  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/ext/wallpaper.jl: added option to pass extra
	arguements to wallpaper-setter

2011-05-28  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/gtk/widgets/file.jl: ported 'file widget to
	gtk-file-chooser-button

	* lisp/sawfish/gtk/widgets/image.jl: improved 'image widget

	* lisp/Makefile.in: don't install wallpaper.jlc (breaks 'image and
	'file widgets (...))

	* lisp/sawfish/wm/ext/wallpaper.jl: added integration of wallpaper
	settings (also gnome2 and xfce4 if desired), original module by Lucas
	Pandolfo and heavily modified by me

2011-05-25  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/gtk/widgets/image.jl: added image-widget for
	sawfish-config (contains preview and selector), original widget by
	Lucas Pandolfo and heavily modified by me

	* lisp/sawfish/gtk/Makefile.in: updated

	* configure.in: bump minimum rep-gtk to 0.90.7 (new funcs required by
	image widget)

2011-05-05  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/commands/jump-or-exec.jl: reverted 2 commits

	* lisp/sawfish/wm/windows.jl: more robustness for get-window-by
	-name, -class, -role

	* **/Makefile.in: remove VPATH to appease makepp [Daniel Pfeiffer]

2011-04-26  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/autoload.jl: removed maybe-raise-tab
	from autoload, aswell as viewport-linear stuff

2011-04-16  Christopher Roy Bratusek <nano@tuxfamily.org>
	* configure.in: bump minimum rep to 0.92.0

2011-04-15  Christopher Roy Bratusek <nano@tuxfamily.org>
	* sawfish.desktop
	* sawfish-wm.desktop
	* sawfish-ksm.desktop: unified order
	                       spec compliance
			       -- Kim B. Heino

2011-04-14  Christopher Roy Bratusek <nano@tuxfamily.org>
	* configure.in
	* Makefile.in
	* sounds/Makefile.in
	* themes/Makefile.in: remove version from install-paths

	* debian/**: merged more stuff from Ian Zimmermann
